数据库迁移完善

--- a/.example.env
+++ b/.example.env
@@ -1,1 +1,1 @@
-APP_DEBUG = true[APP]DEFAULT_TIMEZONE = Asia/Shanghai[DATABASE]TYPE = mysqlHOSTNAME = 192.168.56.102DATABASE = junUSERNAME = dmkPASSWORD = adminrootdmkHOSTPORT = 3306CHARSET = utf8DEBUG = true[LANG]default_lang = zh-cn
+APP_DEBUG = true[APP]DEFAULT_TIMEZONE = Asia/Shanghai[DATABASE]TYPE = mysqlHOSTNAME = 192.168.56.102DATABASE = junUSERNAME = dmkPASSWORD = adminrootdmkHOSTPORT = 3306CHARSET = utf8DEBUG = true[LANG]default_lang = zh-cn[REDIS]HOST = 192.168.10.10PORT = 6379
