--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
         "topthink/think-orm": "^2.0",
         "topthink/think-migration": "^3.0",
         "topthink/think-view": "^1.0",
-        "topthink/think-captcha": "^3.0"
+        "topthink/think-captcha": "^3.0",
+        "fzaninotto/faker": "^1.9"
     },
     "require-dev": {
         "symfony/var-dumper": "^4.2",
